# fastapi-clean-architecture

./: config.py  containers.py  database.py  main.py  pyproject.toml
common/: auth.py
example/ch08_03/: env_ex.py
note/application/: note_service.py
note/domain/repository/: note_repo.py
note/infra/repository/: note_repo.py
note/interface/controllers/: note_controller.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
utils/: create_dummy_users.py  crypto.py
